[gd_scene load_steps=6 format=3 uid="uid://nng8xjwuo33y"]

[ext_resource type="Script" uid="uid://ciasf0sdjnpmv" path="res://audioManager/audio_manager.gd" id="1_vwd0j"]
[ext_resource type="AudioStream" uid="uid://6vn5ka70aw1b" path="res://audio/attic.wav" id="2_0rjh3"]
[ext_resource type="AudioStream" uid="uid://dbmcgfilt85yh" path="res://audio/sfx/audio_steps.wav" id="3_7agkn"]
[ext_resource type="AudioStream" uid="uid://ctg01ulktiegw" path="res://audio/sfx/dialogue/audio_talk_typewriter.wav" id="4_2pvv6"]
[ext_resource type="AudioStream" uid="uid://dv4r44ykw7l1a" path="res://audio/sfx/dialogue/audio_dialogue_click.wav" id="5_5pt51"]

[node name="AudioManager" type="AudioStreamPlayer" node_paths=PackedStringArray("music_player")]
volume_db = -30.0
script = ExtResource("1_vwd0j")
music_player = NodePath(".")
songs = Array[AudioStream]([ExtResource("2_0rjh3")])

[node name="steps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7agkn")
volume_db = -20.0
pitch_scale = 0.9

[node name="land" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7agkn")
volume_db = -20.0
pitch_scale = 0.8

[node name="menuClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7agkn")
volume_db = -20.0
pitch_scale = 2.0

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7agkn")
volume_db = -5.0
pitch_scale = 0.15

[node name="dialogueTalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2pvv6")
volume_db = -20.0
pitch_scale = 1.2

[node name="dialogueClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5pt51")
volume_db = -10.0
pitch_scale = 1.6
